--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mynewwebproject",
   "version": "0.1.0",
   "private": true,
+ "homepage": "https://jeonghoona1816a2.github.io/mynewwebproject",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -21,6 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+   "deploy": "npm run build && gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
