--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mynewwebproject",
   "version": "0.1.0",
   "private": true,
- "homepage": "https://jeonghoona1816a2.github.io/mynewwebproject",
+ "homepage": "https://jeonghoona1816a2.github.io/portfolio_react",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
