--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mynewwebproject",
   "version": "0.1.0",
   "private": true,
- "homepage": "https://www.freedy.co.kr",
+  "homepage": "https://www.freedy.co.kr",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,17 +13,18 @@
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
+    "sass": "^1.88.0",
     "shallow-equal": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-   "predeploy": "npm run build",
-   "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
