--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "mynewwebproject",
   "version": "0.1.0",
   "private": true,
-
   "dependencies": {
     "@tanstack/react-table": "^8.21.3",
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,15 +9,18 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "gh-pages": "^6.1.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "gh-pages": "^6.3.0",
     "jquery": "^3.7.1",
     "lucide-react": "^0.511.0",
+    "mongodb": "^6.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.30.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.2",
-    "sass": "^1.88.0",
+    "sass": "^1.89.0",
     "shallow-equal": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
@@ -26,7 +28,6 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
-
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
